# aigelb

./: LICENSE  renovate.json5
.github/: README.md
.github/workflows/: actions.yml  browser-extension.yml  documentation.yml  evaluation.yml
browser-extension/: .gitignore  .prettierignore  .prettierrc.json  eslint.config.js  package.json  shim.d.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  web-ext.config.ts  wxt.config.ts
browser-extension/dev/: index.html
browser-extension/modules/: locales-index.ts
browser-extension/src/: config.ts  user_prompt.txt
browser-extension/src/api/: ai.ts  huggingface.ts  ollama.ts
browser-extension/src/components/: HelloWorld.vue
docs/: .markdownlint.jsonc  README.md
evaluation/: .env  .gitignore  metrics.csv  models.csv  pyproject.toml  pyrefly.toml  ruff.toml
evaluation/config/: config.env  metrics.csv  models.csv  system_prompt.txt  user_prompt.txt
evaluation/data/: references.csv  sources.csv
evaluation/predictions/2026-01-09T18_55_10/: QuantFactory_EuroLLM-9B-Instruct-GGUF__EuroLLM-9B-Instruct.Q8_0.gguf.csv  bartowski_Llama-3.1-SauerkrautLM-8b-Instruct-GGUF__Llama-3.1-SauerkrautLM-8b-Instruct-Q8_0.gguf.csv  bartowski_Mistral-Nemo-Instruct-2407-GGUF__Mistral-Nemo-Instruct-2407-Q6_K_L.gguf.csv  mradermacher_Tower-Plus-9B-GGUF__Tower-Plus-9B.Q8_0.gguf.csv  unsloth_DeepSeek-R1-0528-Qwen3-8B-GGUF__DeepSeek-R1-0528-Qwen3-8B-UD-Q8_K_XL.gguf.csv  unsloth_Llama-3.1-8B-Instruct-GGUF__Llama-3.1-8B-Instruct-UD-Q8_K_XL.gguf.csv  unsloth_Qwen3-14B-GGUF__Qwen3-14B-UD-Q5_K_XL.gguf.csv  unsloth_gemma-3-12b-it-GGUF__gemma-3-12b-it-UD-Q6_K_XL.gguf.csv  unsloth_phi-4-GGUF__phi-4-Q5_K_M.gguf.csv
evaluation/results/2026-01-09T18_55_10/: 2026-01-10T10_45_10.csv
evaluation/src/: 01_download_models.py  01_download_models_hugging_hub.py  01_download_models_transformers.py  02_inference_llama_cpp_python.py  02_inference_transformers.py  02_prepare_data.py  02_run_inference.py  03_calculate_metrics.py  03_run_inference.py  04_calculate_metrics.py  cleanup.py  get_data.py
evaluation/src/calculation/: __init__.py  calculation_result.py  calculation_service.py  exception.py
evaluation/src/generation/: __init__.py  exception.py  generation_service.py
evaluation/src/helper/: __init__.py  confirm.py  csv.py  file.py  logger.py  metric.py  model.py
evaluation/src/metric/: __init__.py  exception.py  metric.py  metric_library.py  metric_service.py
evaluation/src/model/: __init__.py  exception.py  model.py  model_service.py
evaluation/src/preprocess/: __init__.py  exception.py  preprocess_service.py
evaluation/src/utility/: __init__.py  configuration_service.py  confirm.py  date_service.py  exception.py  file_service.py  logging_service.py
(+71 files in other folders)
