[project]
name = "evaluation"
version = "1.0.0"
description = "Python project to evaluate different resource-friendly LLMs in Geman Easy Language capabilities"
license = { text = "MIT" }
authors = [
    { name = "Tobias Stadler" }
]
repository = "https://github.com/devtobi/aigelb"
readme = "README.md"
keywords = [ "llm", "evaluation", "metrics", "nlp", "mt", "easylanguage" ]
requires-python = "==3.13.7"
dependencies = [
    "dotenv (==0.9.9)",
    "huggingface_hub (==0.35.1)",
    "llama-cpp-python (==0.3.16)",
    "evaluate (==0.4.6)",
    "textstat (==0.7.10)",
    "lexicalrichness (==0.5.1)",
    "pathvalidate (==3.3.1)",
    "tqdm (==4.67.1)",
    "bert-score(==0.3.13)",
    "pandas(==2.3.2)",
]

[dependency-groups]
dev = [
    "pyrefly (==0.35.0)",
    "ruff (==0.13.3)",
]

[tool.uv]
package = false
