[project]
name = "evaluation"
version = "1.0.0"
description = "Python project to evaluate different resource-friendly LLMs in Geman Easy Language capabilities"
license = { text = "MIT" }
authors = [
    { name = "Tobias Stadler" }
]
repository = "https://github.com/devtobi/aigelb"
readme = "README.md"
keywords = [ "llm", "evaluation", "metrics", "nlp", "mt", "easylanguage" ]
requires-python = "==3.14.2"
dependencies = [
    "bert-score(==0.3.13)",
    "cer (==1.2.0)",
    "dotenv (==0.9.9)",
    "evaluate (==0.4.6)",
    "huggingface_hub (==0.36.0)",
    "lexicalrichness (==0.5.1)",
    "llama-cpp-python (==0.3.16)",
    "pandas(==3.0.0)",
    "pathvalidate (==3.3.1)",
    "sacrebleu (==2.6.0)",
    "textstat (==0.7.12)",
    "tqdm (==4.67.2)",
]

[dependency-groups]
dev = [
    "pandas-stubs (==2.3.3.260113)",
    "pyrefly (==0.50.0)",
    "ruff (==0.14.14)",
    "types-tqdm (==4.67.3.20260205)"
]

[tool.uv]
package = false
